--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -7,7 +7,7 @@
           <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search Task....">
         </div>
         <div class="ml-auto p-2">
-          <button type="button" class="btn btn-dark" [routerLink]="['/add']">New Task</button>
+          <button type="button" class="btn btn-dark" [routerLink]="['/task-add']">New Task</button>
         </div>
       </div>
 
@@ -23,7 +23,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of tasks | taskFilter: searchText">
+          <tr *ngFor="let item of tasks | taskFilter: searchText; let i = index">
             <th scope="row">{{item.id}}</th>
             <td>{{item.title}}</td>
             <td>{{item.description}}</td>
@@ -34,7 +34,7 @@
                   <i class="bi bi-trash3"></i>
                 </button>
 
-                <button type="button" class="btn btn-warning">
+                <button type="button" class="btn btn-warning" (click)="onEdit(item.id)">
                   <i class="bi bi-pencil-square"></i>
                 </button>
             </td>
