--- a/src/app/task-edit/task-edit.component.html
+++ b/src/app/task-edit/task-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container col d-flex justify-content-center">
   <div class="card shadow p-3 mb-5 bg-white rounded">
     <div class="card-header">
-      <h3>Add New Task</h3>
+      <h3>Update Task</h3>
     </div>
     <div class="card-body" style="width: 400px;">
 
@@ -32,7 +32,7 @@
 
         <div class="mb-3 mx-auto">
           <button type="submit" [disabled]="taskForm.invalid"
-          class="btn btn-primary me-2">Submit</button>
+          class="btn btn-primary me-2">Update</button>
 
           <button type="button" (click)="cancel()"
           class="btn btn-secondary">Cancel</button>
